--- a/SitoEsame/pizza/css/style.css
+++ b/SitoEsame/pizza/css/style.css
@@ -62,7 +62,7 @@
 
     #content {
         margin-top: 40px;
-        margin-left: 15%;
+        margin-left: 12%;
         margin-right: 15%;
         padding-bottom: 10px;
         padding-left: 20%;
@@ -243,18 +243,14 @@ td.normal {
 }
 
 /* stile delle tabelle per il pannello di controllo*/
-.pControllo {   
+.content{
     border: 0px;
-    border-collapse: collapse;
-    margin-top:50px;
-    line-height: 1.2em;
-    width: 300px;
-    font-size: 14px;
-    margin-bottom: 10px;
+    width: 550px;
     table-layout: fixed;
+    margin-top: 40px;
 }
 
 .noRighe{
     border: 0px;
-    width: 100%;
+    padding-bottom: 40px;
 }
