--- a/SitoEsame/pizza/css/style.css
+++ b/SitoEsame/pizza/css/style.css
@@ -62,8 +62,8 @@
 
     #content {
         margin-top: 40px;
-        margin-left: 12%;
-        margin-right: 15%;
+        margin-left: 15%;
+        margin-right: 10%;
         padding-bottom: 10px;
         padding-left: 20%;
         min-height: 500px;
@@ -216,6 +216,7 @@ table {
     width: 100%;
     font-size: 14px;
     margin-bottom: 10px;
+   
 }
 
 
@@ -234,19 +235,21 @@ td.normal {
     height: 50px;
 }
 
-.esami-col-small{
+.col-small{
     width: 10%;
+    height: 50px;
 }
 
-.esami-col-large{
+.col-large{
     width: 15%;
+    height: 50px;
 }
 
 /* stile delle tabelle per il pannello di controllo*/
 .content{
     border: 0px;
-    width: 120%;
-    margin-right: 10%;
+    width: 110%;
+    margin-right: 15%;
     table-layout: fixed;
     margin-top: 40px;
 }
@@ -254,4 +257,26 @@ td.normal {
 .noRighe{
     border: 0px;
     padding-bottom: 40px;
+}
+
+.error li {
+    list-style: none;
+}
+
+/* stile per i messaggi di errore */
+
+.error{
+    width: 90%;
+    background-color: #f5a5a5;
+    border: 5px solid #9e1616;
+    margin: auto;
+    padding: 10px;
+    text-align: center;
+    margin-top: 5px;
+}
+.error div{
+    margin: 0px;
+    background: url('../images/no.png') no-repeat left top;
+    min-height: 32px;
+    
 }
