--- a/SitoEsame/pizza/css/style.css
+++ b/SitoEsame/pizza/css/style.css
@@ -268,7 +268,7 @@ td.normal {
 .error{
     width: 90%;
     background-color: #f5a5a5;
-    border: 5px solid #9e1616;
+    border: 3px solid #9e1616;
     margin: auto;
     padding: 10px;
     text-align: center;
@@ -279,4 +279,20 @@ td.normal {
     background: url('../images/no.png') no-repeat left top;
     min-height: 32px;
     
+}
+/* stile per i messaggi di conferma */
+
+.confirm{
+    width: 90%;
+    background-color: #c7edce;
+    border: 3px solid #36956e;
+    margin: auto;
+    padding: 10px;
+    text-align: center;
+    margin-top: 5px;
+}
+.confirm div{
+    margin: 0px;
+    background: url('../images/ok.png') no-repeat left top;
+    min-height: 32px;
 }
